# YOLOEZ

./: .coverage  .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  YOLO EZ.spec  YOLOEZ.spec  YOLO_EZ.py  compiler.py  crack_detection_algorithm.py  defect_detect.py  main.py  paper.bib  paper.md  pyproject.toml  utils.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: draft-pdf.yml  test.yml
Apple Pictures/: _annotations.coco.json
DefectDetect/: utils.py
DefectDetect/inference_workflow/: get_model_path.py  image_chooser.py  main.py  main_inference.py  postprocess_results.py  preprocess_images.py
DefectDetect/labelling_workflow/: area_of_interest_marking.py  bootstrap_runner.py  detect_cracks.py  edit_box_points.py  edit_contour_points.py  get_user_inputs_labelling.py  image_gatherer.py  image_preprocessing.py  input_dialogue.py  main_labelling.py  save_and_display_results.py  save_box_results.py  save_segmentation_results.py
DefectDetect/training_workflow/: apply_augmentations.py  augmentation_options.py  create_yaml.py  dataset_chooser.py  get_user_inputs_training.py  live_loss_plot.py  main_training.py  save_model.py  train_model.py  train_test_split.py
YOLOEZ/inference_workflow/: main_inference.py  preprocess_images.py  run_inference.py  save_results.py
YOLOEZ/labelling_workflow/: bootstrap_runner.py  crop_and_mask.py  edit_box_points.py  edit_contour_points.py  get_user_inputs_labelling.py  (+3 more)
crack_detection_algorithm_steps/: area_of_interest_marking.py  compute_crack_skeleton.py  detect_cracks.py  display_statistics.py  edit_contour_points.py  get_phyiscal_scale.py  image_preprocessing.py  input_dialogue.py  save_and_display_results.py
src/: YOLO_EZ.py  __init__.py  compiler.py  main.py  utils.py
tests/: test_cases.py  test_main_launch.py
(+49 files in other folders)
