[project]
name = "YOLOEZ"
version = "0.3.0"
description = "GUI tool for training a YOLO model"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core runtime dependencies
    "albumentations>=2.0.8",
    "keyboard>=0.13.5",
    "opencv-python>=4.13.0.90",
    "pyqtgraph>=0.14.0",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.4.6",
    "torch==2.8.0",
]

[project.optional-dependencies]

# Development / CI / formatting
# UV can't install pyqt5 so this is not listed under the dependencies section, but it is required to run YOLOEZ
# Install it with pip
dev = [
    "pyqt5>=5.15.11",
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "pytest-timeout>=2.4.0",
    "pre-commit>=4.0.0",
    "pyinstaller>=6.18.0",
    "pytest-cov>=7.0.0",
]




